Fix of positioning and overflow for LegendBoxWrapper

--- a/style.css
+++ b/style.css
@@ -131,15 +131,14 @@ body {
 }
 
 .legendBox-wrapper {
-  position: sticky;
+  position: absolute;
   width: 260px;
   max-height: 170px;
   background-color: #fae493;
   border-radius: 6px;
   border-style: solid;
   border-width: 3px;
-  overflow-y: scroll;
-  overflow-x: scroll;
+  overflow: auto;
   padding-bottom: 6px;
 }
 
